app/javascript/flavours/aether/styles/components/status.scss
@keyframes spring-flip-in {
  0% {
    transform: rotate(0deg);
  }

  30% {
    transform: rotate(-242.4deg);
  }

  60% {
    transform: rotate(-158.35deg);
  }

  90% {
    transform: rotate(-187.5deg);
  }

  100% {
    transform: rotate(-180deg);
  }
}

@keyframes spring-flip-out {
  0% {
    transform: rotate(-180deg);
  }

  30% {
    transform: rotate(62.4deg);
  }

  60% {
    transform: rotate(-21.635deg);
  }

  90% {
    transform: rotate(7.5deg);
  }

  100% {
    transform: rotate(0deg);
  }
}

.status__content--with-action > div {
  cursor: pointer;
}

.status__content {
  position: relative;
  margin: 10px 0;
  font-size: 1rem;
  line-height: 1.2;
  word-wrap: break-word;
  font-weight: 400;
  overflow: visible;
  padding-top: 5px;
  clear: both;
  font-family: var(--ui-post-font), sans-serif;

  &:focus {
    outline: 0;
  }

  .emojione {
    width: 20px;
    height: 20px;
    margin: -3px 0 0;
    transition:
      transform 0.2s,
      filter 0.2s;

    &:hover {
      transform: scale(2);
      filter: drop-shadow(0 0 3px var(--ui-shadow-color));
    }
  }

  p,
  pre {
    margin-bottom: 20px;
    white-space: pre-wrap;
    unicode-bidi: plaintext;

    &:last-child {
      margin-bottom: 0;
    }
  }

  a {
    color: var(--ui-font-secondary-color);
    text-decoration: none;
    unicode-bidi: isolate;

    &:hover {
      text-decoration: underline;

      .fa {
        color: var(--ui-font-dimmer-color);
      }
    }

    &.mention {
      &:hover {
        text-decoration: none;

        span {
          text-decoration: underline;
        }
      }
    }

    .fa {
      color: var(--ui-font-dimmer-color);
    }
  }

  a.unhandled-link {
    color: var(--ui-highlight-color);

    .link-origin-tag {
      color: var(--ui-highlight-color);
      font-size: 0.8em;
    }
  }
}

.spoiler_hidden {
  user-select: none;
}

.status__content__edited-label {
  display: block;
  cursor: default;
  font-size: 0.95rem;
  line-height: 1.25;
  padding: 0;
  padding-top: 8px;
  color: var(--ui-font-dimmer-color);
  font-weight: 500;
}

.notif-cleaning {
  .status,
  .notification-follow,
  .notification-follow-request {
    padding-inline-end: ($dismiss-overlay-width + 0.5rem);
  }
}

.status__wrapper--filtered {
  color: var(--ui-font-dimmer-color);
  border: 0;
  font-size: inherit;
  text-align: center;
  line-height: inherit;
  margin: 0;
  padding: 15px;
  box-sizing: border-box;
  width: 100%;
  clear: both;
  z-index: 1;
  position: relative;
}

.status__prepend-icon-wrapper {
  inset-inline-start: -26px;
  position: absolute;
}

.notification-follow,
.notification-follow-request {
  position: relative;

  .account {
    border-bottom: 0 none;
  }
}

.focusable {
  border: 2px solid var(--ui-body-color);
  background: var(--ui-body-color);
  border-radius: var(--ui-border-radius);

  &:focus {
    outline: 0;
    border-color: var(--ui-highlight-color);
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .status {
    &:hover,
    &:focus,
    &:hover,
    &.active {
      .emoji-picker-dropdown {
        opacity: 1;
        transform: scale(1);
      }
    }

    .emoji-picker-dropdown {
      transition: all 200ms !important;
      transition-property: background-color, color, opacity, transform !important;
      @media screen and (min-width: $no-gap-breakpoint) {
        & {
          opacity: 0;
          transform: scale(0.1);
        }
      }
    }
  }

  .focusable {
    transition: border-color 0.2s;
  }
}
/* ... */

